--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,13 @@
 		<link rel="icon"
 			href="<%= BASE_URL %>favicon.ico">
 		<title>
-			<%= htmlWebpackPlugin.options.title
-				%>
+			<%= VUE_APP_NAME %>
 		</title>
 	</head>
 
 	<body class="bg-body min-h-screen p-8 md:px-20 lg:px-40">
 		<noscript>
-			<strong>We're sorry but <%= htmlWebpackPlugin.options.title
-					%> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+			<strong>We're sorry but <%= VUE_APP_NAME %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 		</noscript>
 		<div id="app"></div>
 		<!-- built files will be auto injected -->
